[FE] fix: 로딩 z-index 수정

--- a/frontend/src/scss/styles.scss
+++ b/frontend/src/scss/styles.scss
@@ -257,7 +257,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 2000;
   color: $white;
 
   @for $i from 1 through 10 {
